working on ie11 projhects page fix

--- a/src/Project/Project.css
+++ b/src/Project/Project.css
@@ -10,9 +10,9 @@
     
 }
 
-@supports not (grid-gap: 4rem) {
+@supports not (display: grid) {
     .project{
-        margin: 2rem;
+        margin: 2rem 0;
     }
 }
 
